--- a/HTML-skelett/index.html
+++ b/HTML-skelett/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="utf-8">
     <title>HTML5 Skelett</title>
-    <meta name="description" content="The HTML5 Herald">
-    <meta name="author" content="SitePoint">
+    <meta name="description" content="HTML-skelett">
+    <meta name="author" content="davidsyntex">
 </head>
 <body>
 <header>
@@ -12,9 +12,17 @@
 </header>
 <h2>Filmtitel</h2>
 <img src="" alt="Filmtitelns poster">
-<video>
-    <source src="video.mp4" type="video/mp4">
-</video>
-<footer>Skapat med kärlek av <a href="https://github.com/davidsyntex">David Malmström</a> </footer>
+
+<div>
+    <video width="640" height="360" src="http://www.youtube.com/demo/google_main.mp4" controls preload>
+        <p> Try this page in a modern browser! Or you can <a href="http://www.youtube.com/demo/google_main.mp4">download
+            the
+            video</a> instead.</p>
+    </video>
+</div>
+<p>
+    <a href="http://imdb.com">IMDB</a>
+</p>
+<footer>Skapat med kärlek av <a href="https://github.com/davidsyntex">David Malmström</a></footer>
 </body>
 </html>
