--- a/Garage-Mock/Prototyp1/about.html
+++ b/Garage-Mock/Prototyp1/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -70,8 +70,11 @@
         </div>
     </div>
 </div>
-<footer class="app-footer"><p>Skapat med kärlek av <a href="https://github.com/davidsyntex">David Malmström</a> med
-    hjälp av <a href="https://necolas.github.io/normalize.css/">Normalize.css</a><br></p>
-</footer>
+    <footer class="app-footer">
+        <p>
+            Skapat med kärlek av <a href="https://github.com/davidsyntex">David Malmström</a> med
+            hjälp av <a href="https://necolas.github.io/normalize.css/">Normalize.css</a>. <a href="https://github.com/davidsyntex/SC-IT-utbildning-05">Koden</a> har <a href="https://github.com/davidsyntex/SC-IT-utbildning-05/blob/master/License">MIT-licens</a>. Images are CC.<br>
+        </p>
+    </footer>
 </body>
 </html>
