--- a/Garage-Mock/Prototyp2/index.html
+++ b/Garage-Mock/Prototyp2/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,10 +11,12 @@
 </head>
 <body>
 <div class="app-container">
+    <div class="app-fullscreen-image" style="background-image: url('img/Tesla_Model_S_P85D.jpg')"><h1>Garage</h1></div>
     <header class="app-header">
         <nav>
             <ul>
-                <li><a href="index.html" class="logo"><h1>Garage</h1></a></li>
+                <li><a href="index.html" class="logo">
+                    <h1>Garage</h1></a></li>
                 <li><a href="index.html">Hem</a></li>
                 <li><a href="about.html">Om oss / Kontakt</a></li>
                 <li><a href="vehicles.html">Garagets fordon</a></li>
@@ -23,9 +25,12 @@
     </header>
     <div class="app-body">
         <div
-                class="hero"><a href="#"><h2>Tesla feber!</h2></a><p>Vi har provkört, mixtrat och moddat med alla
-            tre av
-            Teslas bilar.</p></div>
+            class="hero"><a href="#">
+                <h2>Tesla feber!</h2></a>
+            <p>Vi har provkört, mixtrat och moddat med alla
+                tre av
+                Teslas bilar.</p>
+        </div>
         <h2>Nyinkomna fordon</h2>
 
         <div class="app-body-gallery">
@@ -50,7 +55,8 @@
 
         <div class="app-body-news">
             <div class="app-body-news-item">
-                <h3><a href="#">325 000 stycken förhandsbokningar av Tesla Model 3 på en vecka</a></h3>
+                <h3><a href="#">325 000 stycken förhandsbokningar av Tesla Model 3 på en vecka</a>
+                </h3>
 
                 <p>För en vecka sedan släppte Tesla loss förhandsbokningarna av den nya modellen Model 3 och inte helt
                     oväntat blev det hela en succé. Men att det skulle bli en sån här succé hade nog ingen räknat med,
@@ -62,12 +68,15 @@
                     lyckas passera halvmiljonen innan del två av Model 3 presenteras senare i år.</p>
             </div>
             <div class="app-body-news-item">
-                <h3><a href="#">325 000 stycken förhandsbokni</a></h3>
+                <h3><a href="#">325 000 stycken förhandsbokni</a>
+                </h3>
 
-                      <p>Nu återstår det att se i vilken takt kommande bokningar trillar in, Elon Musk tror dock att man
+                <p>Nu återstår det att se i vilken takt kommande bokningar trillar in, Elon Musk tror dock att man
                     lyckas passera halvmiljonen innan del två av Model 3 presenteras senare i år.</p>
-            </div><div class="app-body-news-item">
-                <h3><a href="#">325 000 stycken förhandsbokningar av Tesla Model 3 på en vecka</a></h3>
+            </div>
+            <div class="app-body-news-item">
+                <h3><a href="#">325 000 stycken förhandsbokningar av Tesla Model 3 på en vecka</a>
+                </h3>
 
                 <p>För en vecka sedan släppte Tesla loss förhandsbokningarna av den nya modellen Model 3 och inte helt
                     oväntat blev det hela en succé. Men att det skulle bli en sån här succé hade nog ingen räknat med,
@@ -77,8 +86,10 @@
 
                 <p>Nu återstår det att se i vilken takt kommande bokningar trillar in, Elon Musk tror dock att man
                     lyckas passera halvmiljonen innan del två av Model 3 presenteras senare i år.</p>
-            </div><div class="app-body-news-item">
-                <h3><a href="#">325 000 stycken förhandsbokningar av Tesla Model 3 på en vecka</a></h3>
+            </div>
+            <div class="app-body-news-item">
+                <h3><a href="#">325 000 stycken förhandsbokningar av Tesla Model 3 på en vecka</a>
+                </h3>
 
                 <p>Nu återstår det att se i vilken takt kommande bokningar trillar in, Elon Musk tror dock att man
                     lyckas passera halvmiljonen innan del två av Model 3 presenteras senare i år.</p>
@@ -87,7 +98,8 @@
     </div>
 </div>
 <footer class="app-footer"><p>Skapat med kärlek av <a href="https://github.com/davidsyntex">David Malmström</a> med
-    hjälp av <a href="https://necolas.github.io/normalize.css/">Normalize.css</a><br></p>
+    hjälp av <a href="https://necolas.github.io/normalize.css/">Normalize.css</a>. <a href="https://github.com/davidsyntex/SC-IT-utbildning-05">Koden</a> har <a href="https://github.com/davidsyntex/SC-IT-utbildning-05/blob/master/License">MIT-licens</a>. Images are CC.<br>
+    </p>
 </footer>
 </body>
 </html>
