Completed prototyp 2 task

--- a/Garage-Mock/Prototyp2/index.html
+++ b/Garage-Mock/Prototyp2/index.html
@@ -10,95 +10,208 @@
     <link href="css/app.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<!--<header class="app-header">
+    <nav>
+        <ul>
+            <li>
+                <a href="#" class="logo">
+                    <h1>Garage</h1>
+                </a>
+            </li>
+            <li>
+                <a href="#">Hem</a>
+            </li>
+            <li>
+                <a href="#">Om oss / Kontakt</a>
+            </li>
+            <li>
+                <a href="#">Garagets fordon</a>
+            </li>
+        </ul>
+    </nav>
+</header>-->
 <div class="app-container">
-    <div class="app-fullscreen-image" style="background-image: url('img/Tesla_Model_S_P85D.jpg')"><h1>Garage</h1></div>
-    <header class="app-header">
-        <nav>
-            <ul>
-                <li><a href="index.html" class="logo">
-                    <h1>Garage</h1></a></li>
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="about.html">Om oss / Kontakt</a></li>
-                <li><a href="vehicles.html">Garagets fordon</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="app-fullscreen-image" style="background-image: url('img/Tesla_Model_S_P85D.jpg')">
+        <h1>Garage</h1>
+    </div>
+
     <div class="app-body">
-        <div
-            class="hero"><a href="#">
-                <h2>Tesla feber!</h2></a>
-            <p>Vi har provkört, mixtrat och moddat med alla
-                tre av
-                Teslas bilar.</p>
+        <div class="app-body-full-width hero">
+            <div class="app-body-content">
+                <h2>Tesla feber!</h2>
+                <p>
+                    Vi har provkört, mixtrat och moddat med alla
+                    tre av
+                    Teslas bilar.
+                </p>
+            </div>
         </div>
-        <h2>Nyinkomna fordon</h2>
-
-        <div class="app-body-gallery">
-            <div class="app-body-gallery-item" style="background-image: url('img/Tesla_Model_S_P85D.jpg');"></div>
-            <div class="app-body-gallery-item" style="background-image: url('img/maxresdefault.jpg');"></div>
-            <div class="app-body-gallery-item"
-                 style="background-image: url('img/Tesla_Model_X_vin0002_trimmed.jpg');"></div>
-
-            <div class="app-body-gallery-item" style="background-image: url('img/Tesla_Model_S_P85D.jpg');"></div>
-            <div class="app-body-gallery-item" style="background-image: url('img/maxresdefault.jpg');"></div>
-            <div class="app-body-gallery-item"
-                 style="background-image: url('img/Tesla_Model_X_vin0002_trimmed.jpg');"></div>
-
-            <div class="app-body-gallery-item" style="background-image: url('img/Tesla_Model_S_P85D.jpg');"></div>
-            <div class="app-body-gallery-item" style="background-image: url('img/maxresdefault.jpg');"></div>
-            <div class="app-body-gallery-item"
-                 style="background-image: url('img/Tesla_Model_X_vin0002_trimmed.jpg');"></div>
-
+        <div class="app-body-full-width about">
+            <div class="app-body-content">
+                <h2>Om oss</h2>
+                <p>
+                    Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.
+                    Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.
+                </p>
+            </div>
         </div>
 
-        <h2>Nyheter</h2>
-
-        <div class="app-body-news">
-            <div class="app-body-news-item">
-                <h3><a href="#">325 000 stycken förhandsbokningar av Tesla Model 3 på en vecka</a>
-                </h3>
-
-                <p>För en vecka sedan släppte Tesla loss förhandsbokningarna av den nya modellen Model 3 och inte helt
-                    oväntat blev det hela en succé. Men att det skulle bli en sån här succé hade nog ingen räknat med,
-                    inte ens Tesla. En vecka efter släppet har man fått in mer än 325 000 stycken förhandsbokningar på
-                    bilen, något som gör lanseringen till den största produktlanseringen någonsin. Om nu Tesla kan
-                    leverera alla bilar innebär det en försäljning på 14 miljarder dollar.</p>
-
-                <p>Nu återstår det att se i vilken takt kommande bokningar trillar in, Elon Musk tror dock att man
-                    lyckas passera halvmiljonen innan del två av Model 3 presenteras senare i år.</p>
+        <div class="app-body-full-width contact">
+            <div class="app-body-content">
+                <h2>Kontakt</h2>
+                <h3>Fredrik Fabiansson</h3>
+                <p>HR-ansvarig</p>
+                <p>678 912 345</p>
+                <p>fredrik@garage.fejk</p>
             </div>
-            <div class="app-body-news-item">
-                <h3><a href="#">325 000 stycken förhandsbokni</a>
-                </h3>
-
-                <p>Nu återstår det att se i vilken takt kommande bokningar trillar in, Elon Musk tror dock att man
-                    lyckas passera halvmiljonen innan del två av Model 3 presenteras senare i år.</p>
+        </div>
+        <div class="app-body-vehicles vehicles app-body-full-width">
+            <div class="app-body-content">
+                <h2>Samtliga fordon</h2>
             </div>
-            <div class="app-body-news-item">
-                <h3><a href="#">325 000 stycken förhandsbokningar av Tesla Model 3 på en vecka</a>
-                </h3>
-
-                <p>För en vecka sedan släppte Tesla loss förhandsbokningarna av den nya modellen Model 3 och inte helt
-                    oväntat blev det hela en succé. Men att det skulle bli en sån här succé hade nog ingen räknat med,
-                    inte ens Tesla. En vecka efter släppet har man fått in mer än 325 000 stycken förhandsbokningar på
-                    bilen, något som gör lanseringen till den största produktlanseringen någonsin. Om nu Tesla kan
-                    leverera alla bilar innebär det en försäljning på 14 miljarder dollar.</p>
-
-                <p>Nu återstår det att se i vilken takt kommande bokningar trillar in, Elon Musk tror dock att man
-                    lyckas passera halvmiljonen innan del två av Model 3 presenteras senare i år.</p>
+            <div class="app-body-vehicles-item">
+                <div class="app-body-vehicles-item-image" style="background-image: url('img/Tesla_Model_S_P85D.jpg')"></div>
+                <div class="app-body-vehicles-item-information">
+                    <div>
+                        <h3>Registreringsnummer</h3>
+                        <p>HEJ 456</p>
+                    </div>
+                    <div>
+                        <h3>Modell</h3>
+                        <p>Tesla Model S</p>
+                    </div>
+                    <div>
+                        <h3>Ägare</h3>
+                        <p>Peter Pedersen</p>
+                    </div>
+                </div>
             </div>
-            <div class="app-body-news-item">
-                <h3><a href="#">325 000 stycken förhandsbokningar av Tesla Model 3 på en vecka</a>
-                </h3>
-
-                <p>Nu återstår det att se i vilken takt kommande bokningar trillar in, Elon Musk tror dock att man
-                    lyckas passera halvmiljonen innan del två av Model 3 presenteras senare i år.</p>
+            <div class="app-body-vehicles-item">
+                <div class="app-body-vehicles-item-image" style="background-image: url('img/Tesla_Model_S_P85D.jpg')"></div>
+                <div class="app-body-vehicles-item-information">
+                    <div>
+                        <h3>Registreringsnummer</h3>
+                        <p>HEJ 456</p>
+                    </div>
+                    <div>
+                        <h3>Modell</h3>
+                        <p>Tesla Model S</p>
+                    </div>
+                    <div>
+                        <h3>Ägare</h3>
+                        <p>Peter Pedersen</p>
+                    </div>
+                </div>
+            </div>
+            <div class="app-body-vehicles-item">
+                <div class="app-body-vehicles-item-image" style="background-image: url('img/Tesla_Model_S_P85D.jpg')"></div>
+                <div class="app-body-vehicles-item-information">
+                    <div>
+                        <h3>Registreringsnummer</h3>
+                        <p>HEJ 456</p>
+                    </div>
+                    <div>
+                        <h3>Modell</h3>
+                        <p>Tesla Model S</p>
+                    </div>
+                    <div>
+                        <h3>Ägare</h3>
+                        <p>Peter Pedersen</p>
+                    </div>
+                </div>
+            </div>
+            <div class="app-body-vehicles-item">
+                <div class="app-body-vehicles-item-image" style="background-image: url('img/Tesla_Model_S_P85D.jpg')"></div>
+                <div class="app-body-vehicles-item-information">
+                    <div>
+                        <h3>Registreringsnummer</h3>
+                        <p>HEJ 456</p>
+                    </div>
+                    <div>
+                        <h3>Modell</h3>
+                        <p>Tesla Model S</p>
+                    </div>
+                    <div>
+                        <h3>Ägare</h3>
+                        <p>Peter Pedersen</p>
+                    </div>
+                </div>
+            </div>
+            <div class="app-body-vehicles-item">
+                <div class="app-body-vehicles-item-image" style="background-image: url('img/Tesla_Model_S_P85D.jpg')"></div>
+                <div class="app-body-vehicles-item-information">
+                    <div>
+                        <h3>Registreringsnummer</h3>
+                        <p>HEJ 456</p>
+                    </div>
+                    <div>
+                        <h3>Modell</h3>
+                        <p>Tesla Model S</p>
+                    </div>
+                    <div>
+                        <h3>Ägare</h3>
+                        <p>Peter Pedersen</p>
+                    </div>
+                </div>
+            </div>
+            <div class="app-body-vehicles-item">
+                <div class="app-body-vehicles-item-image" style="background-image: url('img/Tesla_Model_S_P85D.jpg')"></div>
+                <div class="app-body-vehicles-item-information">
+                    <div>
+                        <h3>Registreringsnummer</h3>
+                        <p>HEJ 456</p>
+                    </div>
+                    <div>
+                        <h3>Modell</h3>
+                        <p>Tesla Model S</p>
+                    </div>
+                    <div>
+                        <h3>Ägare</h3>
+                        <p>Peter Pedersen</p>
+                    </div>
+                </div>
+            </div>
+            <div class="app-body-vehicles-item">
+                <div class="app-body-vehicles-item-image" style="background-image: url('img/Tesla_Model_S_P85D.jpg')"></div>
+                <div class="app-body-vehicles-item-information">
+                    <div>
+                        <h3>Registreringsnummer</h3>
+                        <p>HEJ 456</p>
+                    </div>
+                    <div>
+                        <h3>Modell</h3>
+                        <p>Tesla Model S</p>
+                    </div>
+                    <div>
+                        <h3>Ägare</h3>
+                        <p>Peter Pedersen</p>
+                    </div>
+                </div>
+            </div>
+            <div class="app-body-vehicles-item">
+                <div class="app-body-vehicles-item-image" style="background-image: url('img/Tesla_Model_S_P85D.jpg')"></div>
+                <div class="app-body-vehicles-item-information">
+                    <div>
+                        <h3>Registreringsnummer</h3>
+                        <p>HEJ 456</p>
+                    </div>
+                    <div>
+                        <h3>Modell</h3>
+                        <p>Tesla Model S</p>
+                    </div>
+                    <div>
+                        <h3>Ägare</h3>
+                        <p>Peter Pedersen</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<footer class="app-footer"><p>Skapat med kärlek av <a href="https://github.com/davidsyntex">David Malmström</a> med
-    hjälp av <a href="https://necolas.github.io/normalize.css/">Normalize.css</a>. <a href="https://github.com/davidsyntex/SC-IT-utbildning-05">Koden</a> har <a href="https://github.com/davidsyntex/SC-IT-utbildning-05/blob/master/License">MIT-licens</a>. Images are CC.<br>
+<footer class="app-footer">
+    <p>
+        Skapat med kärlek av <a href="https://github.com/davidsyntex">David Malmström</a> med
+        hjälp av <a href="https://necolas.github.io/normalize.css/">Normalize.css</a>. <a href="https://github.com/davidsyntex/SC-IT-utbildning-05">Koden</a> har <a href="https://github.com/davidsyntex/SC-IT-utbildning-05/blob/master/License">MIT-licens</a>. Images are CC.<br>
     </p>
 </footer>
 </body>
